<resources>
    <string name="app_name">Smart Farmer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_profile">Your profile</string>
    <string name="username">Username</string>
    <string name="make_profile_private">Make profile private</string>
    <string name="phone_number">Phone number</string>
    <string name="food_preferences">Food preferences</string>
    <string name="delete_account">Delete account</string>
    <string name="edit_account">Edit account</string>
    <string name="back_to_main">Back to main</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_preferences">Enter your preferences</string>
    <string name="edit_profile">Edit profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="go_back_to_profile">Go back to profile</string>
    <string name="messages_sent">Messages sent</string>
    <string name="messages_received">Messages received</string>
    <string name="messages">Messages</string>
    <string name="profil_fermier">Profil fermier</string>
    <string name="login">LOGIN</string>
    <string name="cont">CONT</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product name</string>
    <string name="_0">0</string>
    <string name="product_description">Product description</string>
    <string name="send_message_to">Send message to:</string>
    <string name="enter_the_email_address">Enter the email address</string>
    <string name="send_new_message">Send new message</string>
    <string name="message">Message</string>
    <string name="send_image">Send Image</string>
    <string name="get_products">Get products</string>
    <string name="delete_users">DELETE USERS</string>
    <string name="get_users">GET USERS</string>
    <string name="chat">Chat</string>
    <string name="price">Price</string>
    <string name="go_back_to_all_messages">Go back to all messages</string>
    <string name="profilePhoto" />
    <string name="profile_photo">Profile photo</string>
    <string name="back_to_profile">Back to profile</string>
    <string name="product_image">Product image</string>
    <string name="description">Description:</string>
    <string name="farmer">Farmer:</string>
    <string name="button">Button</string>
    <string name="one_time">One time</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="choose_the_type_of_subscription_for_the_product">Choose the type of subscription for the product:
    </string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="home">Home</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="one_time_shopping">One time shopping</string>
    <string name="daily_shopping">Daily shopping</string>
    <string name="weekly_shopping">Weekly shopping</string>
    <string name="monthly_shopping">Monthly shopping</string>
    <string name="place_order">Place order</string>
    <string name="total_for_one_time_shopping">Total for one time shopping:  </string>
    <string name="total_for_monthly_shopping">Total for monthly shopping:  </string>
    <string name="total_for_weekly_shopping">Total for weekly shopping:  </string>
    <string name="total_for_daily_shopping">Total for daily shopping  </string>
    <string name="total_for_order">Total for order:  </string>
</resources>