<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            tools:context=".UserProfileEdit"
            android:background="@drawable/gradient_green_background">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/profileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="165dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="172dp"
                android:text="@string/your_profile"
                android:textColor="#35214D"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"/>

        <EditText
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="177dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/passwordText"
                android:textColor="#000000"/>

        <EditText
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="177dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/usernameText" android:textColor="#000000"/>
        <EditText
                android:id="@+id/editUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_your_username"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/phoneNumberText"
                android:textColor="#000000"
        />
        <EditText
                android:id="@+id/editPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberText"
                android:layout_marginTop="16dp"
                android:textColor="#000000"/>
        <Button
                android:id="@+id/editProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                app:backgroundTint="#35214D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPhone"
                app:layout_constraintHorizontal_bias="0.51" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="20dp"/>
        <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/emailText"
                android:textSize="18sp"
                android:layout_marginEnd="338dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/editEmail"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="200dp"
                app:layout_constraintVertical_bias="1.0" android:textColor="#000000"/>
        <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/passwordText"
                android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="303dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/editPassword"
                android:textColor="#000000"/>
        <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/usernameText"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/editUsername"
                android:textColor="#000000"/>
        <TextView
                android:text="@string/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneNumberText"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/editPhone"
                android:textColor="#000000"/>
        <ImageView
                android:layout_width="132dp"
                android:layout_height="115dp" tools:src="@drawable/add_photo_profile" android:id="@+id/profilePhoto"
                android:layout_marginTop="35dp"
                app:layout_constraintTop_toBottomOf="@+id/profileTitle"
                android:contentDescription="@string/profile_photo"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="135dp"
                android:layout_marginEnd="135dp" app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/add_photo_profile"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>