<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            tools:context=".UserProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/profileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="165dp"
                android:layout_marginEnd="172dp"
                android:text="@string/your_profile"
                android:textColor="#9E1C1C"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.431" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
        />
        <TextView
                android:id="@+id/seeUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="230dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:textSize="18sp"
                android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/phoneNumberText"/>

        <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/usernameText"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="302dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/seeUsername"
                app:layout_constraintTop_toBottomOf="@+id/emailText" android:layout_marginTop="50dp"/>

        <TextView
                android:text="@string/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/phoneNumberText"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="267dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/seePhoneNumber"
        />
        <TextView
                android:id="@+id/seePhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="230dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:textSize="18sp"
                android:layout_marginBottom="30dp" app:layout_constraintBottom_toTopOf="@+id/deleteAccount"/>
        <Button
                android:text="@string/delete_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteAccount"
                app:backgroundTint="#9C2020"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="35dp"
                app:layout_constraintEnd_toStartOf="@+id/editAccount" android:layout_marginEnd="52dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/edit_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="#9C2020"
                android:id="@+id/editAccount"
                app:layout_constraintStart_toEndOf="@+id/deleteAccount"
                android:layout_marginEnd="49dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
                android:layout_width="135dp"
                android:layout_height="126dp" tools:src="@drawable/add_photo_profile"
                android:id="@+id/seePhoto"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="137dp" android:layout_marginTop="45dp"
                app:layout_constraintTop_toBottomOf="@+id/profileTitle" android:layout_marginEnd="137dp"
                app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/profilePhoto"
                android:src="@drawable/add_photo_profile"/>
        <ImageButton
                android:src="@drawable/abc_vector_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/backMain"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="PrivateResource"
                app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/back_to_main"/>
        <TextView
                android:text="@string/email"
                android:textSize="18sp"
                android:ems="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/emailText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="240dp" app:layout_constraintTop_toBottomOf="@+id/backMain"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:id="@+id/seeEmail"
                app:layout_constraintTop_toBottomOf="@+id/emailText" android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/usernameText"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>