<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/productName"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="172dp" android:textStyle="bold" android:textSize="24sp"/>
    <ImageView
            android:layout_width="338dp"
            android:layout_height="295dp" app:srcCompat="@drawable/round_background" android:id="@+id/productPhoto"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="130dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="37dp" android:contentDescription="@string/product_image"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/productPrice"
            android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/productPhoto"
            android:layout_marginStart="25dp" app:layout_constraintStart_toEndOf="@+id/price" android:textSize="18sp"/>
    <TextView
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/price"
            android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/productPhoto" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" android:textStyle="bold" android:textSize="18sp"/>
    <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/description"
            android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/price" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" android:textStyle="bold" android:textSize="18sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/productDescription"
            android:textSize="18sp" android:layout_marginStart="25dp"
            app:layout_constraintStart_toEndOf="@+id/description" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="527dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/farmerName" android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="90dp" android:layout_marginStart="11dp"
            app:layout_constraintStart_toEndOf="@+id/farmer" android:textStyle="bold"/>
    <TextView
            android:text="@string/farmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/farmer" android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="90dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"/>
    <Button
            android:text="@string/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button1"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="66dp"
            android:layout_marginTop="69dp" app:layout_constraintTop_toBottomOf="@+id/description"/>
    <Button
            android:text="@string/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            android:layout_marginStart="40dp" app:layout_constraintStart_toEndOf="@+id/button1"
            android:layout_marginTop="191dp" app:layout_constraintTop_toBottomOf="@+id/productPhoto"/>
</androidx.constraintlayout.widget.ConstraintLayout>