<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/send_message_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendMessageText" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="31dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="249dp"
            app:layout_constraintBottom_toTopOf="@+id/editEmailSend" android:layout_marginEnd="190dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editEmailSend"
            android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@+id/sendMessageText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="99dp" android:layout_marginBottom="46dp"
            app:layout_constraintBottom_toTopOf="@+id/sentEmailToButton" android:layout_marginEnd="99dp"
            app:layout_constraintEnd_toEndOf="parent" android:autofillHints=""
            android:hint="@string/enter_the_email_address"
    />
    <Button
            android:text="@string/send_new_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/sentEmailToButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="252dp" android:layout_marginEnd="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmailSend"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>