<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
            android:layout_width="262dp"
            android:layout_height="37dp" android:id="@+id/usernameReceiver"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="18sp" android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"/>
        <Button
                android:text="@string/go_back_to_all_messages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/backToChatContacts"
        />
    <ListView
            android:layout_width="409dp"
            android:layout_height="397dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/messages"
            android:scrollingCache="true"
            android:smoothScrollbar="true"
            android:divider="@null"/>
    <LinearLayout android:orientation="horizontal" android:layout_height="64dp" android:layout_width="match_parent">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/messageToSent"
                android:hint="@string/message"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
                android:autofillHints="" tools:ignore="LabelFor"
                app:layout_constraintTop_toBottomOf="@+id/messages" android:textSize="24sp" android:padding="10dp"
                android:paddingStart="10dp" android:paddingEnd="20dp" android:layout_marginEnd="10dp"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_send"
                android:id="@+id/sendImageButton"
                app:layout_constraintTop_toBottomOf="@+id/messages"
                app:layout_constraintStart_toEndOf="@+id/messageToSent"
                android:contentDescription="@string/send_image" android:layout_marginStart="50dp"/>
    </LinearLayout>

</LinearLayout>


